config: Update vercel.json for React frontend deployment
- Set build command to build React app in frontend directory
- Configure output directory to frontend/dist
- Add API routes for backend at /api/* paths
- Add SPA routing fallback to index.html
- Enable proper separation of frontend and backend

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,21 @@
 {
+    "buildCommand": "cd frontend && npm install && npm run build",
+    "outputDirectory": "frontend/dist",
+    "framework": null,
     "rewrites": [
         {
-            "source": "/(.*)",
-            "destination": "/api/index.py"
+            "source": "/api/:path*",
+            "destination": "/backend/main.py"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "/backend/main.py"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
