--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,10 @@
 {
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
-    "framework": null,
     "rewrites": [
         {
-            "source": "/api/:path*",
-            "destination": "/backend/main.py"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/backend/main.py"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
