--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-    "buildCommand": "cd frontend && npm install && npm run build",
-    "outputDirectory": "frontend/dist",
+    "buildCommand": "npm run build",
+    "installCommand": "npm install",
+    "outputDirectory": "dist",
+    "framework": null,
     "rewrites": [
         {
             "source": "/(.*)",
