fix: Resolve read-only file system crash in Vercel
- Moved UPLOAD_DIR to /tmp/uploads to comply with Vercel's immutable serverless environment.
- Cleaned up imports and grouped FastAPI dependencies in main.py.
- Standardized constant naming and added missing docstrings in api/index.py.
- Added python-multipart and aiofiles to requirements.txt for file handling.
- Optimized .vercelignore to ensure backend/ and api/ are correctly included.

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,14 +1,18 @@
 # Vercel Deployment Optimization
 # ------------------------------
 
-# Ignore local dev/build artifacts
-node_modules/
-.venv/
-venv/
-env/
-__pycache__/
-*.pyc
+# Ignore all node_modules and virtual environments
+**/node_modules/
+**/.venv/
+**/venv/
+**/env/
+**/__pycache__/
+**/*.pyc
 .vercel/
+
+# Ignore local dev/build artifacts
+frontend/dist/
+frontend/node_modules/
 
 # Ignore local data and large source files
 ml_engine/
@@ -17,6 +21,7 @@ ml_engine/
 *.log
 Dockerfile
 docker-compose.yml
+frontend_vanilla/
 
 # Ignore other non-essential files
 LICENSE
