--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,11 @@
 	"version": 2,
 	"buildCommand": "cd frontend && npm install && npm run build",
 	"outputDirectory": "frontend/dist",
+	"trailingSlash": false,
 	"rewrites": [
 		{
-			"source": "/api/(.*)",
-			"destination": "/api/index.py"
-		},
-		{
 			"source": "/(.*)",
-			"destination": "/index.html"
+			"destination": "/api/index.py"
 		}
 	]
 }
